# ts0202_pir_custom_firmware

./: .gitignore  CMakeLists.txt  README.md
src/: app_cfg.h  battery.c  battery.h  bdb_init.c  bdb_init.h  board.h  button.c  button.h  clusters.c  clusters.h  helpers.h  led.c  led.h  main.c  occupancy.c  occupancy.h  version_cfg.h
